@@ -18,8 +18,8 @@
     <picocli.version>4.7.7</picocli.version>
     <jackson.version>2.20.2</jackson.version>
     <junit.version>6.0.1</junit.version>
-    <assertj.version>3.27.6</assertj.version>
-    <wiremock.version>2.27.2</wiremock.version>
+    <assertj.version>3.27.7</assertj.version>
+    <wiremock.version>3.13.2</wiremock.version>
 
     <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
     <maven.enforcer.plugin.version>3.6.2</maven.enforcer.plugin.version>
@@ -42,6 +42,7 @@
       </releases>
       <snapshots>
         <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
       </snapshots>
     </repository>
   </repositories>
@@ -88,7 +89,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.github.tomakehurst</groupId>
+      <groupId>org.wiremock</groupId>
       <artifactId>wiremock</artifactId>
       <version>${wiremock.version}</version>
       <scope>test</scope>
@@ -184,6 +185,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven.surefire.plugin.version}</version>
         <configuration>
+          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
           <includes>
             <include>**/*Test.java</include>
           </includes>
@@ -198,6 +200,7 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>${maven.failsafe.plugin.version}</version>
         <configuration>
+          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
           <includes>
             <include>**/*IT.java</include>
           </includes>
